samples/_failures_safe/1761002675_ee47b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a4005c7.c: In function ‘main’:
./samples/SAFE/__tmp_2a4005c7.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("Size mismatch: original=%zu, decompressed=%zu\n", input_size, decompressed.size);
      |         ^~~~~~
./samples/SAFE/__tmp_2a4005c7.c:161:9: error: expected declaration or statement at end of input
